Changes to automate 2nd api

--- a/QEA-Integration-Tests/IntegrationTests.properties
+++ b/QEA-Integration-Tests/IntegrationTests.properties
@@ -11,7 +11,7 @@ downloads=/filepathpath
 
 
 #Api Details
-api.uri=https://reqres.in
+api.uri=https://restful-booker.herokuapp.com
 user.name=test
 user.password=password
 client.id=sajdhbsjhvbs
