--- a/.github/workflows/Run API Test cases.yml
+++ b/.github/workflows/Run API Test cases.yml
@@ -1,22 +1,19 @@
 name: Run Regression suite
 on:
   push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
-
+    branches:
+      - master
 jobs:
   build:
-
     runs-on: windows-latest
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn test -DsuiteXmlFile=Run_API_Tests.xml
+      - uses: actions/checkout@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: "11"
+          distribution: temurin
+          cache: maven
+      - name: Build with Maven
+        working-directory: ./QEA-Integration-Tests
+        run: mvn test -DsuiteXmlFile=Run_API_Tests.xml
