Changes for UI Automation

--- a/QEA-Integration-Tests/IntegrationTests.properties
+++ b/QEA-Integration-Tests/IntegrationTests.properties
@@ -9,6 +9,9 @@ browser=chrome
 
 downloads=/filepathpath
 
+## Web Automation
+base.url=https://www.dominos.co.in/
+execution.browser=chrome
 
 #Api Details
 api.uri=https://restful-booker.herokuapp.com
