--- a/QEA-Integration-Tests/pom.xml
+++ b/QEA-Integration-Tests/pom.xml
@@ -44,7 +44,7 @@
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
-			<version>3.141.59</version>
+			<version>4.18.1</version>
 		</dependency>
 		<dependency>
 			<groupId>tech.grasshopper</groupId>
@@ -159,6 +159,12 @@
 			<artifactId>log4j-core</artifactId>
 			<version>2.14.1</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+		<dependency>
+			<groupId>io.github.bonigarcia</groupId>
+			<artifactId>webdrivermanager</artifactId>
+			<version>5.4.0</version>
+		</dependency>
 
 	</dependencies>
 	<build>
@@ -193,7 +199,7 @@
 						<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
 					</suiteXmlFiles>
 					<skip>false</skip>
-					<threadCount>2</threadCount>
+					<threadCount>3</threadCount>
 					<perCoreThreadCount>false</perCoreThreadCount>
 					<testFailureIgnore>true</testFailureIgnore>
 				</configuration>
