--- a/QEA-Integration-Tests/src/test/resources/extent.properties
+++ b/QEA-Integration-Tests/src/test/resources/extent.properties
@@ -9,7 +9,7 @@ extent.reporter.spark.config=src/test/resources/extent-config.xml
 extent.reporter.rerunspark.config=src/test/resources/extent-config.xml
 
 extent.reporter.html.out=ExtentReport/CucumberHtmlReport/ExtentHtmlReport.html
-extent.reporter.logger.out=
+extent.reporter.logger.out=ExtentReport/log.txt
 extent.reporter.spark.out=ExtentReport/SparkHtmlReport/SparkHtmlReport.html
 extent.reporter.rerunspark.out=
 
