--- a/.github/workflows/UIRegressionTests.yml
+++ b/.github/workflows/UIRegressionTests.yml
@@ -1,35 +1,57 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-name: Java CI with Maven
+name: Run UI Regression Tests
 
 on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+   workflow_dispatch:
+    inputs:
+      Execution_Environment:
+        type: Dropdown
+        description: Select the environment
+      choice:
+        type: choice
+        options:
+        - DEV
+        - QA
+        - Pre-prod
 
+      Module:
+        type: Dropdown
+        description: Select the TestSuite For execution
+        options:
+        - RegressionTest
+        - DominosOrderOnlineTest
+
+      Test_Input:
+        default: "Input Field Defaualt value"
+        description: "Added this for default input filed"
+        
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
+  RunTests:
+    runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      - name: Set up Latest Chrome
+      - uses: browser-actions/setup-chrome@latest
+      - run: chrome --version
+      - uses: actions/checkout@v2
+      
+      - name: Set up Java 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'adopt'
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+      - name: Set up Maven
+        uses: stCarolas/setup-maven@v4.3
+        with:
+         maven-version: 3.8.2
+
+      - name: Executing the selected Module
+        working-directory: ./QEA-Integration-Tests
+        run: mvn clean test -Dtest=UITestRunner -Dcucumber.filter.tags=@${{github.event.inputs.Module}
+      
+      - name: Upload Execution Report
+        if : ${{always()}}
+        uses: actions/upload-artifact@v3
+        with:
+          name: ${{github.event.inputs.Module}-Execution-Report
+          path: D:/a/QEA-Integration-Tests/ExtentReport
