--- a/.github/workflows/UIRegressionTest.yml
+++ b/.github/workflows/UIRegressionTest.yml
@@ -37,23 +37,23 @@ jobs:
       - uses: actions/checkout@v2
       
       - name: Set up Java 11
-        uses: actions/setup-java@v3
+      - uses: actions/setup-java@v3
         with:
           java-version: '11'
           distribution: 'adopt'
 
       - name: Set up Maven
-        uses: stCarolas/setup-maven@v4.3
+      - uses: stCarolas/setup-maven@v4.3
         with:
          maven-version: 3.8.2
 
       - name: Executing the selected Module
-        working-directory: ./QEA-Integration-Tests
-        run: mvn clean test -Dtest=UITestRunner -Dcucumber.filter.tags=@${{github.event.inputs.Module}}
+      - working-directory: ./QEA-Integration-Tests
+      - run: mvn clean test -Dtest=UITestRunner -Dcucumber.filter.tags=@${{github.event.inputs.Module}}
       
       - name: Upload Execution Report
         if : ${{always()}}
-        uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v3
         with:
           name: ${{github.event.inputs.Module}}-Execution-Report
           path: D:/a/QEA-Integration-Tests/ExtentReport
