Changes for rerun failed tests

--- a/QEA-Integration-Tests/IntegrationTests.properties
+++ b/QEA-Integration-Tests/IntegrationTests.properties
@@ -7,6 +7,10 @@ username=jhasdcvbh
 passowrd=sdvsvsdv
 browser=chrome
 
+extent.html.report=/ExtentReport/CucumberHtmlReport/ExtentHtmlReport.html
+extent.html.firstrun.report=/ExtentReport/FirstRunCucumberHtmlReport/
+extent.html.rerun.report=/ExtentReport/RerunCucumberHtmlReport/
+
 downloads=/filepathpath
 
 ## Web Automation
