--- a/.github/workflows/UIRegressionTest.yml
+++ b/.github/workflows/UIRegressionTest.yml
@@ -35,14 +35,14 @@ jobs:
 
       - name: Started Tests Execution
         working-directory: ./QEA-Integration-Tests
-        run: 'mvn clean test -DsuiteXmlFile="Run_UI_Tests.xml" -Dcucumber.filter.tags="@RerunTest"'
+        run: 'mvn clean test -DsuiteXmlFile="Run_UI_Tests.xml" -Dcucumber.options="--monochrome --tags @RerunTest"'
      
       - name: Upload Execution Report
         if: '${{always()}}'
         uses: actions/upload-artifact@v3
         with:
           name: Execution-Report
-          path: 'D:/a/QE-Project/QE-Project/QEA-Integration-Tests/ExtentReport/CucumberHtmlReport'
+          path: 'D:/a/QE-Project/QEA-Integration-Tests/ExtentReport/CucumberHtmlReport'
      
       - name: Send Email
         if: success() || failure()
@@ -60,4 +60,4 @@ jobs:
           to: 'vijayy8981@gmail.com,shivanand.jangam@gmail.com'
           from: Automated Tests Execution report for ${{github.event.inputs.Module}} Suite
           contentType: text/html
-          attachments: 'D:/a/QE-Project/QE-Project/QEA-Integration-Tests/ExtentReport/CucumberHtmlReport'
+          attachments: 'D:/a/QE-Project/QEA-Integration-Tests/ExtentReport/CucumberHtmlReport'
