--- a/.github/workflows/RerunXML.yml
+++ b/.github/workflows/RerunXML.yml
@@ -18,9 +18,8 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      - uses: browser-actions/setup-chrome@latest
+      - uses: browser-actions/setup-chrome@v1
       - run: chrome --version
-      - uses: actions/checkout@v2
 
       - name: Set up JDK 11
         uses: actions/setup-java@v3
@@ -35,7 +34,7 @@ jobs:
 
       - name: Started Tests Execution
         working-directory: ./QEA-Integration-Tests
-        run: 'mvn clean -Dtags="@RerunTest" -DsuiteXmlFile="Run_UI_Tests.xml"  test'
+        run: 'mvn clean -Dtags="@RerunTest" -Dbrowser="chrome" -DsuiteXmlFile="Run_UI_Tests.xml"  test'
 
       - name: Started FAILED Tests Re-Run Execution
         working-directory: ./QEA-Integration-Tests
@@ -64,4 +63,4 @@ jobs:
           to: 'vijayy8981@gmail.com,shivanand.jangam@gmail.com'
           from: Automated Tests Execution report for ${{github.event.inputs.Module}} Suite
           contentType: text/html
-          attachments: 'D:/a/QE-Project/QE-Project/QEA-Integration-Tests/ExtentReport'
+          attachments: 'D:/a/QE-Project/QE-Project/QEA-Integration-Tests/ExtentReport/FirstRunCucumberHtmlReport/ExtentHtmlReport.html'
