--- a/.github/workflows/RerunXML.yml
+++ b/.github/workflows/RerunXML.yml
@@ -17,9 +17,9 @@ jobs:
 
     runs-on: windows-latest
 
-    steps:
-      - uses: browser-actions/setup-chrome@v1
-      - run: chrome --version
+    steps: 
+      - name : Chrome setup
+        uses: browser-actions/setup-chrome@v1
 
       - name: Set up JDK 11
         uses: actions/setup-java@v3
@@ -32,6 +32,9 @@ jobs:
         with:
           maven-version: 3.8.2
 
+      - name: Project Checkout
+        uses: actions/checkout@master
+        
       - name: Started Tests Execution
         working-directory: ./QEA-Integration-Tests
         run: 'mvn clean -Dtags="@RerunTest" -Dbrowser="chrome" -DsuiteXmlFile="Run_UI_Tests.xml"  test'
