--- a/QEA-Integration-Tests/pom.xml
+++ b/QEA-Integration-Tests/pom.xml
@@ -9,7 +9,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<cucumber.filter.tags>cucumber.filter.tags</cucumber.filter.tags>
+		<cucumber.filter.tags>tags</cucumber.filter.tags>
 	</properties>
 
 	<dependencies>
@@ -202,7 +202,7 @@
 				<version>3.0.0-M7</version>
 				<configuration>
 					<systemPropertyVariables>
-						<cucumber.filter.tags>${cucumber.filter.tags}</cucumber.filter.tags>
+						<cucumber.filter.tags>${tags}</cucumber.filter.tags>
 					</systemPropertyVariables>
 					<suiteXmlFiles>
 						<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
@@ -218,7 +218,7 @@
 				<version>3.0.0-M7</version>
 				<configuration>
 					<systemPropertyVariables>
-						<cucumber.filter.tags>${cucumber.filter.tags}</cucumber.filter.tags>
+						<cucumber.filter.tags>${tags}</cucumber.filter.tags>
 					</systemPropertyVariables>
 				</configuration>
 			</plugin>
