Changes for environment

--- a/QEA-Integration-Tests/IntegrationTests.properties
+++ b/QEA-Integration-Tests/IntegrationTests.properties
@@ -14,7 +14,8 @@ extent.html.rerun.report=/ExtentReport/RerunCucumberHtmlReport/
 downloads=/filepathpath
 
 ## Web Automation
-base.url=https://www.dominos.co.in/
+Environment=qa
+base.url=https://www.{env}.dominos.co.in/
 execution.browser=chrome
 
 #Api Details
