Changes for environment handle

--- a/QEA-Integration-Tests/IntegrationTests.properties
+++ b/QEA-Integration-Tests/IntegrationTests.properties
@@ -14,7 +14,7 @@ extent.html.rerun.report=/ExtentReport/RerunCucumberHtmlReport/
 downloads=/filepathpath
 
 ## Web Automation
-Environment=qa
+Environment=prod
 base.url=https://www.{env}.dominos.co.in/
 execution.browser=chrome
 
